--- a/command/CMakeLists.txt
+++ b/command/CMakeLists.txt
@@ -1,7 +1,13 @@
 cmake_minimum_required(VERSION 3.10)
-set(CMAKE_CXX_STANDARD 23)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-project(pix128 VERSION 1.0)
+project(pix28 VERSION 1.0)
 
-add_executable(out ./src/main.cpp)
+include_directories(include)
+
+find_package(OpenSSL REQUIRED)
+
+add_executable(out
+    src/main.cpp
+)
+
+target_link_libraries(out PRIVATE OpenSSL::SSL OpenSSL::Crypto)
