--- a/templates/template/template.toml
+++ b/templates/template/template.toml
@@ -1,10 +1,10 @@
 [template]
-id: "template" # Must be same as the folder name. Can only include: lowercase letters a-z, numbers 0-9, underscores _.
-description: "This is template of pix128 template" # Description of the template
-verion: 0 # Any time you change the template, increase this number
+id = "template" # Must be same as the folder name. Can only include = lowercase letters a-z, numbers 0-9, underscores _.
+description = "This is template of pix128 template" # Description of the template
+verion = 0 # Any time you change the template, increase this number
 
 [engine]
-engine: "template"
+engine = "template"
 
 [libraries]
-libraries: ["template"]
+libraries = ["template"]
