--- a/engines/template/engine.toml
+++ b/engines/template/engine.toml
@@ -1,7 +1,8 @@
+[engine]
 id = "template" # Must be same as the folder name. Can only include = lowercase letters a-z, numbers 0-9, underscores _.
-description = "This is template of an engine" # Description of this engine
-version = 0 # Every time you change this engine, increase this number
+description = "This is template of pix128 engine" # Description of the engine
+verion = 0 # Any time you change the library, increase this number
 
-[import]
-javascript = ["index.js"]
-css = ["style.css"]
+[imports]
+javascript-files = ["index.js"]
+css-files = ["style.css"]
