--- a/libraries/template/library.toml
+++ b/libraries/template/library.toml
@@ -1,7 +1,8 @@
+[library]
 id = "template" # Must be same as the folder name. Can only include = lowercase letters a-z, numbers 0-9, underscores _.
-description = "This is template of a library" # Description of this library
-version = 0 # Every time you change this library, increase this number
+description = "This is template of pix128 library" # Description of the library
+verion = 0 # Any time you change the library, increase this number
 
-[import]
-javascript = ["index.js"]
-css = ["style.css"]
+[imports]
+javascript-files = ["index.js"]
+css-files = ["style.css"]
