--- a/command/CMakeLists.txt
+++ b/command/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 
 project(pix28 VERSION 1.0)
 
-set(CMAKE_C_COMPILER gcc)
-set(CMAKE_CXX_COMPILER g++)
+set(CMAKE_C_COMPILER_LAUNCHER ccache)
+set(CMAKE_CXX_COMPILER_LAUNCHER ccache)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
