--- a/libraries/template/library.toml
+++ b/libraries/template/library.toml
@@ -1,7 +1,7 @@
-id = "template" # Must be same as the folder name. Can only include = lowercase letters a-z, numbers 0-9, underscores _.
 description = "This is template of a library" # Description of this library
 version = 0 # Every time you change this library, increase this number
 
 [import]
-javascript = ["index.js"]
-css = ["style.css"]
+priority = 0 # In which order files will be imported. Check https://github.com/pg255/pix128/blob/main/documentation/documentation.md#libraries
+javascript = ["index.js"] # All of these files will be included in index.html file
+css = ["style.css"] # All of these files will be included in index.html file
